WebM has seemingly arbitrary frame size limit of 4096x4096
Is this part of the specification for the format? I cannot find anything that specifies such a limit, other than the hard limitations of the VP8 and VP9 codecs. This limit is what's stopping Gnome-shell from recording unusually large virtual desktops.
https://bugzilla.gnome.org/show_bug.cgi?id=699845
I'm not sure if I should tell them to change their default pipeline, possibly to something faster for such high resolutions, or if this is worth changing here in the webmmux filter.